<resources>
    <string name="app_name" translatable="false">Murbin</string>
    <string name="global_string_location">Localización</string>
    <string name="preferences_activity_title">Preferencias</string>
    <string name="global_preferences_category_general">General</string>
    <string name="global_preferences_key_background_music_title">Servicio de Música</string>
    <string name="global_preferences_key_background_music_summary">Inicia/Detiene el servicio de reproducción de música.</string>
    <string name="permissions_message_title">Solicitud de permisos</string>
    <string name="permissions_message_action">OK</string>
    <string name="permissions_message_denied">Si no concedes el permiso, no se puede realizar la acción solicitada.</string>
    <string name="general_main_menu_login">Login</string>
    <string name="general_main_menu_settings">Ajustes</string>
    <string name="general_main_menu_about_murbin">Sobre Murbin</string>
    <string name="general_main_bottom_navigation_home">Home</string>
    <string name="general_main_bottom_navigation_map">Mapa</string>
    <string name="general_main_bottom_navigation_data">Histórico</string>
    <string name="general_map_menu_login">Login</string>
    <string name="general_map_menu_settings">Ajustes</string>
    <string name="general_map_menu_about_murbin">Sobre Murbin</string>
    <string name="general_map_bottom_navigation_home">Home</string>
    <string name="general_map_bottom_navigation_map">Mapa</string>
    <string name="general_map_bottom_navigation_data">Histórico</string>
    <string name="administrator_main_menu_settings">Ajustes</string>
    <string name="administrator_main_menu_logout">Desconectarse</string>
    <string name="administrator_main_bottom_navigation_dashboard">Home</string>
    <string name="administrator_main_bottom_navigation_subzones">Subzonas</string>
    <string name="administrator_main_bottom_navigation_technician">Técnicos</string>
    <string name="administrator_main_bottom_navigation_config">Config</string>
    <string name="administrator_technician_main_menu_settings">Ajustes</string>
    <string name="administrator_technician_main_menu_logout">Desconectarse</string>
    <string name="administrator_technicians_list_menu_create">+</string>
    <string name="administrator_technicians_edit_menu_delete">Eliminar</string>
    <string name="administrator_subzone_main_menu_settings">Ajustes</string>
    <string name="administrator_subzone_main_menu_logout">Desconectarse</string>
    <string name="administrator_subzones_list_menu_create">+</string>
    <string name="administrator_subzones_edit_menu_delete">Eliminar</string>
    <string name="root_administrator_main_menu_settings">Ajustes</string>
    <string name="root_administrator_main_menu_logout">Desconectarse</string>
    <string name="root_administrators_list_menu_create">Nuevo</string>
    <string name="root_administrators_edit_menu_delete">Eliminar</string>
    <string name="root_main_bottom_navigation_dashboard">Home</string>
    <string name="root_main_bottom_navigation_subzones">Subzonas</string>
    <string name="root_main_bottom_navigation_technician">Técnicos</string>
    <string name="root_main_bottom_navigation_administrator">Admins</string>
    <string name="technician_main_menu_settings">Ajustes</string>
    <string name="technician_main_menu_logout">Desconectarse</string>
    <string name="dialog_fragment_tv_title_default">Sobre Murbin</string>
    <string name="dialog_fragment_tv_message_default">Esta aplicación ha sido creada por el gran equipo de Murbin, para el Proyecto Internet of Things del Grado de Tecnologías Interectivas.\n\nLa música que se puede escuchar es libre de derechos y está ofrecida por Audionautix.com</string>
    <string name="dialog_fragment_dismiss_message">OK</string>
    <string name="auth_email_activity_iv_go_back">Regresar</string>
    <string name="auth_email_activity_tv_title">Iniciar sesión</string>
    <string name="auth_email_activity_tv_remember_password">¿No recuerdas la contraseña?</string>
    <string name="auth_email_activity_tv_register">¿No tienes cuenta? Regístrate</string>
    <string name="auth_email_activity_btn_enter">Entrar</string>
    <string name="auth_email_activity_btn_auth_with_google">Entrar con Google</string>
    <string name="auth_email_activity_et_email">Email</string>
    <string name="auth_email_activity_et_email_hint">Introduce el email</string>
    <string name="auth_email_activity_et_password">Contraseña</string>
    <string name="auth_email_activity_et_password_hint">Introduce la contraseña</string>
    <string name="auth_email_recovery_password_fragment_tv_title">Recuperación contraseña</string>
    <string name="auth_email_recovery_password_fragment_et_email_hint">Email</string>
    <string name="auth_email_recovery_password_fragment_btn_enter">Enviar</string>
    <string name="profile_fragment_tv_email_verification">No podrás usar la aplicación hasta que valides tu correo electrónico. Pulsa el siguiente botón para recibir el mensaje de confirmación. Gracias.</string>
    <string name="profile_fragment_btn_email_verification">Enviar mensaje de confirmación</string>
    <string name="profile_fragment_btn_email_verification_sended">Mensaje enviado</string>
    <string name="profile_fragment_tv_username">Nombre de usuario: </string>
    <string name="profile_fragment_tv_email">Email: </string>
    <string name="profile_fragment_tv_prividers">Proveedores: </string>
    <string name="profile_fragment_tv_phone">Teléfono: </string>
    <string name="profile_fragment_tv_uid">UID: </string>
    <string name="profile_fragment_error_1">Datos del usuario no recibidos.</string>
    <string name="GeneralMainActivity_permission_error_1">No has concedido acceso a tu ubicación, se ubicará tu posición en el centro de la zona.</string>
    <string name="UsesCasesZoneGeneral_permission_justification_map">Se require el acceso a tu ubicación para poder mostrarte tu ubicación real aproximada.</string>
    <string name="general_fragment_home_old_tv_welcome">Bienvenido [Zone User]</string>
    <string name="general_fragment_home_tv_title">Tu entorno</string>
    <string name="general_fragment_frame_tv_value">103</string>
    <string name="general_fragment_frame_tv_type">Ruido</string>
    <string name="general_fragment_frame_tv_unit">dB</string>
    <string name="recycler_fragment_element_tv_title">Nombre</string>
    <string name="general_fragment_tv_ruido">Ruido (dB)</string>
    <string name="general_fragment_tv_co2">CO2 (%)</string>
    <string name="general_fragment_tv_temperatura">Temperatura (ºC)</string>
    <string name="general_fragment_tv_humedad">Humedad (%)</string>
    <string name="general_fragment_tv_brillo">Brillo (%)</string>
    <string name="general_fragment_tv_subzonas">Subzonas</string>
    <string name="technician_main_activity_tv_welcome">Bienvenido/a [Zona Technical]</string>
    <string name="technician_streetlight_create_tv_title">Crear farola</string>
    <string name="technician_streetlight_create_name_hint">Nombre</string>
    <string name="technician_streetlight_create_localization_hint">Localización</string>
    <string name="technician_streetlight_create_btn_crear">Crear</string>
    <string name="technician_streetlight_create_btn_cancelar">Cancelar</string>
    <string name="technician_streetlight_edit_tv_title">Editar farola</string>
    <string name="technician_streetlight_edit_tv_subtitle">Farola X</string>
    <string name="technician_streetlight_edit_name_hint">Nombre</string>
    <string name="technician_streetlight_edit_localization_hint">Localización</string>
    <string name="technician_streetlight_edit_btn_guardar">Guardar</string>
    <string name="technician_streetlight_edit_btn_cancelar">Cancelar</string>
    <string name="technician_streetlight_edit_btn_on_off">On / Off</string>
    <string name="technician_subzone_edit_btn_guardar">Guardar</string>
    <string name="technician_subzone_edit_btn_cancelar">Cancelar</string>
    <string name="technician_subzone_edit_tv_title">Editar subzona</string>
    <string name="technician_subzone_edit_tv_subtitle">Nombre de la subzona</string>
    <string name="technician_subzone_edit_name_hint">Nombre</string>
    <string name="technician_subzone_edit_localization_hint">Localización</string>
    <string name="technician_notification_list_tv_title">Notificaciones</string>
    <string name="technician_streetlight_list_tv_title">Farolas</string>
    <string name="technician_subzones_tv_title">Subzona X</string>
    <string name="technician_main_tv_title">Bienvenido</string>
    <string name="technician_main_tv_subtitle">Gandía</string>
    <string name="technician_streetlight_tv_subtitle">Grao de Gandía</string>
    <string name="administrator_main_activity_tv_title">Bienvenido</string>
    <string name="administrator_fragment_large_frame_tv_title">Bienvenido</string>
    <string name="administrator_fragment_large_frame_tv_subtitle">Gandía</string>
    <string name="administrator_fragment_large_frame_tv_type">Estado</string>
    <string name="administrator_fragment_large_frame_tv_status">On/Off</string>
    <string name="administrator_fragment_large_frame_tv_number">0</string>
    <string name="administrator_fragment_large_frame_fragment_iv_type">Image</string>
    <string name="administrator_fragment_large_frame_btn_go">Ir</string>
    <string name="administrator_fragment_medium_frame_tv_salutation">Hello blank fragment</string>
    <string name="administrator_fragment_medium_frame_tv_type">Subzonas</string>
    <string name="administrator_fragment_medium_frame_tv_type2">Técnicos</string>
    <string name="administrator_fragment_small_frame_tv_noise">Ruido(dB)</string>
    <string name="administrator_fragment_small_frame_tv_temperature">Temp(Cº)</string>
    <string name="administrator_fragment_small_frame_tv_co2">CO2(ppm)</string>
    <string name="administrator_technicians_list_tv_title">Técnicos</string>
    <string name="administrator_select_tv_title">Seleccionar subzonas</string>
    <string name="administrator_technicians_edit_tv_title">Editar técnico</string>
    <string name="administrator_technicians_edit_tv_subtitle">Nombre Apellido </string>
    <string name="administrator_technicians_edit_name_hint">Nombre</string>
    <string name="administrator_technicians_edit_email_hint">Email</string>
    <string name="administrator_technicians_edit_password_hint">Contraseña</string>
    <string name="administrator_technicians_edit_subzones_hint">Subzonas</string>
    <string name="administrator_technicians_edit_btn_crear">Guardar</string>
    <string name="administrator_technicians_edit_btn_cancelar">Cancelar</string>
    <string name="administrator_technicians_create_tv_title">Crear técnico</string>
    <string name="administrator_technicians_create_name_hint">Nombre</string>
    <string name="administrator_technicians_create_email_hint">Email</string>
    <string name="administrator_technicians_create_password_hint">Contraseña</string>
    <string name="administrator_technicians_create_subzones_hint">Subzonas</string>
    <string name="administrator_technicians_create_btn_crear">Crear</string>
    <string name="root_administrators_edit_activity_tv_title">Editar Administrador</string>
    <string name="root_administrators_edit_activity_tv_name">Nombre</string>
    <string name="root_administrators_edit_activity_et_name_hint">Introduce el nombre</string>
    <string name="root_administrators_edit_activity_tv_surname">Apellidos</string>
    <string name="root_administrators_edit_activity_et_surname_hint">Introduce los apellidos</string>
    <string name="root_administrators_edit_activity_tv_email">Email</string>
    <string name="root_administrators_edit_activity_et_email_hint">Introduce el email</string>
    <string name="root_administrators_edit_activity_btn_cancel">Cancelar</string>
    <string name="root_administrators_edit_activity_btn_save">Guardar</string>
</resources>