<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/administrator_fragment_large_frame_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_large_frame">

    <TextView
        android:id="@+id/administrator_fragment_large_frame_tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/administrator_fragment_large_frame_tv_type"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/administrator_fragment_large_frame_tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratlight"
        android:text="@string/administrator_fragment_large_frame_tv_number"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/administrator_fragment_large_frame_fragment_iv_type"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:contentDescription="@string/administrator_fragment_large_frame_fragment_iv_type"
        android:rotation="-33"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_fragment_type_bell" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="75dp" />

</androidx.constraintlayout.widget.ConstraintLayout>