<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/auth_email_activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/auth_email_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auth_email_activity_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserratmedium"
        android:text="@string/auth_email_activity_tv_title"
        android:textColor="@color/negro"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_email_activity_toolbar" />

    <EditText
        android:id="@+id/auth_email_activity_et_email"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="auth_email_activity_et_email_hint"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:ems="0"
        android:fontFamily="@font/montserratmedium"
        android:hint="@string/auth_email_activity_et_email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:textColor="@color/negro"
        android:textColorHighlight="@color/principal"
        android:textColorLink="@color/principal_variante"
        android:textCursorDrawable="@color/principal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_email_activity_tv_title" />

    <EditText
        android:id="@+id/auth_email_activity_et_password"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/auth_email_activity_et_password_hint"
        android:drawableStart="@drawable/ic_locker"
        android:drawablePadding="8dp"
        android:ems="0"
        android:fontFamily="@font/montserratmedium"
        android:hint="@string/auth_email_activity_et_password_hint"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:textColor="@color/negro"
        android:textColorHighlight="@color/principal"
        android:textColorLink="@color/principal_variante"
        android:textCursorDrawable="@color/principal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_email_activity_et_email" />

    <TextView
        android:id="@+id/auth_email_activity_tv_remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserratmedium"
        android:text="@string/auth_email_activity_tv_remember_password"
        android:textColor="@color/negro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_email_activity_et_password" />

    <Button
        android:id="@+id/auth_email_activity_btn_enter"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/main_button"
        android:fontFamily="@font/montserratmedium"
        android:shadowColor="@null"
        android:shadowRadius="0"
        android:text="@string/auth_email_activity_btn_enter"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_email_activity_tv_remember_password" />

</androidx.constraintlayout.widget.ConstraintLayout>